--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "validator": "^13.11.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
