--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,32 @@
 version: '3.9'
 services:
+  db:
+    image: mysql:8.0.32
+    container_name: db
+    ports:
+      - 3306:3306
+    env_file:
+      - .env
+    environment:
+      - MYSQL_ROOT_PASSWORD=123456
+      - MYSQL_DB_NAME=orange_portifolio_db
+    restart: 'always'
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"] # Deve aguardar o banco ficar operacional
+      timeout: 10s
+      retries: 5
+    cap_add:
+      - SYS_NICE # Deve omitir alertas menores
+    networks:
+      - app-network
+
   frontend:
     container_name: app_client
     build: ./client
     ports:
       - 3000:3000
+    env_file:
+      - .env
     working_dir: /app-client
     # Os `healthcheck` devem garantir que a aplicação
     # está operacional, antes de liberar o container
@@ -12,11 +34,15 @@ services:
       test: ["CMD", "lsof", "-t", "-i:3000"]  # Caso utilize outra porta interna para o front, altere ela aqui também
       timeout: 10s
       retries: 5
+    networks:
+      - app-network
   backend:
     container_name: app_server
     build: ./server
     ports:
       - 3001:3001
+    env_file:
+      - .env
     working_dir: /app-server
     # Caso queira que o container esteja atualizado durante o desenvolvimento, sem que você precise ficar fazendo down e up dos containers, descomente as 3 linhas abaixo
     # command: dev 
@@ -39,18 +65,8 @@ services:
       test: ["CMD", "lsof", "-t", "-i:3001"] # Caso utilize outra porta interna para o back, altere ela aqui também
       timeout: 10s
       retries: 5
-  db:
-    image: mysql:8.0.32
-    container_name: db
-    ports:
-      - 3306:3306
-    environment:
-      - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_DB_NAME=orange_portifolio_db
-    restart: 'always'
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"] # Deve aguardar o banco ficar operacional
-      timeout: 10s
-      retries: 5
-    cap_add:
-      - SYS_NICE # Deve omitir alertas menores
+    networks:
+      - app-network
+  networks:
+  app-network:
+    driver: bridge  
