--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.4",
     "validator": "^13.11.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
