--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
 version: '3.9'
+
+networks:
+  mvp-orange-squad13_network:
+
 services:
   frontend:
     container_name: app_client
@@ -6,20 +10,19 @@ services:
     ports:
       - 3000:3000
     working_dir: /app-client
-    # Os `healthcheck` devem garantir que a aplicação
-    # está operacional, antes de liberar o container
     healthcheck:
-      test: ["CMD", "lsof", "-t", "-i:3000"]  # Caso utilize outra porta interna para o front, altere ela aqui também
+      test: ["CMD", "lsof", "-t", "-i:3000"]
       timeout: 10s
       retries: 5
+    networks:
+      - mvp-orange-squad13_network
+
   backend:
     container_name: app_server
     build: ./server
     ports:
       - 3001:3001
     working_dir: /app-server
-    # Caso queira que o container esteja atualizado durante o desenvolvimento, sem que você precise ficar fazendo down e up dos containers, descomente as 3 linhas abaixo
-    # command: dev 
     volumes: 
       - ./server/src:/app-server/src
       - ./client/src:/app-client/src
@@ -27,36 +30,32 @@ services:
       db:
         condition: service_healthy
     env_file:
-      - .env
+      - server/.env  # Carregar variáveis de ambiente do arquivo .env
     environment:
       - APP_PORT=${API_PORT}
       - JWT_SECRET=${JWT_SECRET}
-      # Os dados abaixo se referem ao container `db`
-      # Dica: Relembre aqui da comunicação interna entre containers
-      # - DB_USER=${MYSQL_USER}
+      - DB_USER=${MYSQL_USER}
       - DB_PASS=${MYSQL_PASSWORD}
       - DB_HOST=${MYSQL_HOST}
       - DB_PORT=${MYSQL_PORT}
     healthcheck:
-      test: ["CMD", "lsof", "-t", "-i:3001"] # Caso utilize outra porta interna para o back, altere ela aqui também
+      test: ["CMD", "lsof", "-t", "-i:3001"]
       timeout: 10s
       retries: 5
+    networks:
+      - mvp-orange-squad13_network
+
   db:
     image: mysql:5.7.32
     container_name: db
     ports:
       - 3306:3306
     env_file:
-      - .env
-    environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
-      - MYSQL_DB_NAME=${MYSQL_DB_NAME}
+      - server/.env  # Carregar variáveis de ambiente do arquivo .env
     restart: 'always'
     healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"] # Deve aguardar o banco ficar operacional
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 10s
       retries: 5
-    cap_add:
-      - SYS_NICE # Deve omitir alertas menores
-
-      # TODO fazer carregamento do .env
+    networks:
+      - mvp-orange-squad13_network
