--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,29 @@ networks:
   mvp-orange-squad13_network:
 
 services:
+  db:
+    image: mysql:8.0.36
+    container_name: db
+    ports:
+      - 3306:3306
+    env_file:
+      - ./server/.env  # Carregar variáveis de ambiente do arquivo .env
+    restart: 'always'
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 5
+    networks:
+      - mvp-orange-squad13_network
+
   frontend:
     container_name: app_client
     build: ./client
     ports:
       - 3000:3000
     working_dir: /app-client
+    # Os `healthcheck` devem garantir que a aplicação
+    # está operacional, antes de liberar o container
     healthcheck:
       test: ["CMD", "lsof", "-t", "-i:3000"]
       timeout: 10s
@@ -23,6 +40,8 @@ services:
     ports:
       - 3001:3001
     working_dir: /app-server
+    # Caso queira que o container esteja atualizado durante o desenvolvimento, sem que você precise ficar fazendo down e up dos containers, descomente as 3 linhas abaixo
+    # command: dev
     volumes: 
       - ./server/src:/app-server/src
       - ./client/src:/app-client/src
@@ -30,31 +49,9 @@ services:
       db:
         condition: service_healthy
     env_file:
-      - server/.env  # Carregar variáveis de ambiente do arquivo .env
-    environment:
-      - APP_PORT=${API_PORT}
-      - JWT_SECRET=${JWT_SECRET}
-      - DB_USER=${MYSQL_USER}
-      - DB_PASS=${MYSQL_PASSWORD}
-      - DB_HOST=${MYSQL_HOST}
-      - DB_PORT=${MYSQL_PORT}
+      - ./server/.env  # Carregar variáveis de ambiente do arquivo .env
     healthcheck:
       test: ["CMD", "lsof", "-t", "-i:3001"]
-      timeout: 10s
-      retries: 5
-    networks:
-      - mvp-orange-squad13_network
-
-  db:
-    image: mysql:5.7.32
-    container_name: db
-    ports:
-      - 3306:3306
-    env_file:
-      - server/.env  # Carregar variáveis de ambiente do arquivo .env
-    restart: 'always'
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 10s
       retries: 5
     networks:
