--- a/server/.env.example
+++ b/server/.env.example
@@ -1,12 +1,16 @@
 #BACKEND .ENV
 
 #API PORT
-API_PORT=
+API_PORT=3001
 
 #BD CONNECTION MYSQL
+# nome do container banco de dados
 MYSQL_HOST=db
 MYSQL_PORT=3306
-MYSQL_DB_NAME=
+MYSQL_DATABASE=
+# user senhas diferentes para o root e senha de usuario
+MYSQL_ROOT_PASSWORD=
+# usar usuario diferente do "root"
 MYSQL_USER=
 MYSQL_PASSWORD=
 
