--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "express-async-errors": "3.1.1",
     "jsonwebtoken": "8.5.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "2.3.3",
     "sequelize": "6.25.5",
     "uuid": "^9.0.1"
