config multer s3, aws bucket S3, install lib aws-sdk, storge local working

--- a/server/.env.example
+++ b/server/.env.example
@@ -19,3 +19,8 @@ JWT_SECRET=
 
 # CORS ORIGIN URL
 CORS_URL=http://localhost:3000
+
+# AWS CONFIG
+AWS_ACESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
