--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "squad13",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1550.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "dotenv": "^16.4.1",
@@ -19,6 +20,7 @@
     "express-async-errors": "3.1.1",
     "jsonwebtoken": "8.5.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "2.3.3",
     "sequelize": "6.25.5",
     "uuid": "^9.0.1"
