refactor routes for aws s3

--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "author": "squad13",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1550.0",
+    "@aws-sdk/client-s3": "^3.37.0",
+    "@aws-sdk/node-http-handler": "^3.36.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "dotenv": "^16.4.1",
